--- a/blog/src/_includes/components/featured-posts-en.njk
+++ b/blog/src/_includes/components/featured-posts-en.njk
@@ -5,7 +5,13 @@
    Displays featured blog posts in English only
    ======================================================================== #}
 
-{% set featuredSlides = collections.featuredPosts | selectattr("data.lang", "equalto", "en") %}
+{# Filter featured posts for English language manually #}
+{% set featuredSlides = [] %}
+{% for post in collections.featuredPosts %}
+  {% if post.data.lang == "en" %}
+    {% set featuredSlides = (featuredSlides.push(post), featuredSlides) %}
+  {% endif %}
+{% endfor %}
 
 {# Only render if we have English featured posts #}
 {% if featuredSlides | length > 0 %}
