--- a/blog/src/index-es.njk
+++ b/blog/src/index-es.njk
@@ -1,7 +1,7 @@
 ---
 layout: layouts/base.njk
-title: "Blog"
-description: "Lee nuestras últimas perspectivas sobre práctica de yoga, filosofía y comunidad"
+title: "Blog de Yoga - Consejos e Inspiración | SGP Yoga CDMX"
+description: "Explora sabiduría de yoga, consejos de práctica y filosofía de nuestros maestros en CDMX. Descubre artículos sobre Kundalini, Vinyasa y bienestar. ¡Lee ahora!"
 image: "/assets/photos/inUse/social/og-blog.webp"
 lang: es
 permalink: "/es/index.html"
