add general page speed optimizations sitewide (LCP optimization, deferred / async loading of non-crucial css/js)

--- a/blog/src/_includes/components/featured-posts-en.njk
+++ b/blog/src/_includes/components/featured-posts-en.njk
@@ -44,6 +44,7 @@
                                 src="{{ post.data.image }}" 
                                 alt="{{ post.data.imageAlt or post.data.title }}"
                                 loading="{{ loadingStrategy }}"
+                                {% if isFirstSlide %}fetchpriority="high"{% endif %}
                                 class="featured-image"
                                 {% if post.data.imageFeaturedPosition %}style="object-position: {{ post.data.imageFeaturedPosition }};"{% endif %}>
                             {% endif %}
