--- a/blog/src/_includes/components/featured-posts-es.njk
+++ b/blog/src/_includes/components/featured-posts-es.njk
@@ -44,6 +44,7 @@
                                 src="{{ post.data.image }}" 
                                 alt="{{ post.data.imageAlt or post.data.title }}"
                                 loading="{{ loadingStrategy }}"
+                                {% if isFirstSlide %}fetchpriority="high"{% endif %}
                                 class="featured-image"
                                 {% if post.data.imageFeaturedPosition %}style="object-position: {{ post.data.imageFeaturedPosition }};"{% endif %}>
                             {% endif %}
