--- a/blog/src/_includes/layouts/base.njk
+++ b/blog/src/_includes/layouts/base.njk
@@ -16,10 +16,10 @@
     
     {# Open Graph / Facebook #}
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://www.sgpyoga.co{{ page.url }}">
+    <meta property="og:url" content="https://sgpyoga.co/blog/dist{{ page.url }}">
     <meta property="og:title" content="{{ title or 'SGP Yoga Blog' }}">
     <meta property="og:description" content="{{ description or 'Explore yoga wisdom, practice tips, and philosophy from our teachers in Mexico City.' }}">
-    <meta property="og:image" content="https://www.sgpyoga.co{{ image or '/assets/photos/social/og-blog.webp' }}">
+    <meta property="og:image" content="https://sgpyoga.co{{ image or '/assets/photos/social/og-blog.webp' }}">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:locale" content="{% if lang == 'es' %}es_MX{% else %}en_US{% endif %}">
@@ -28,23 +28,45 @@
     
     {# Twitter Card #}
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://www.sgpyoga.co{{ page.url }}">
+    <meta name="twitter:url" content="https://sgpyoga.co/blog/dist{{ page.url }}">
     <meta name="twitter:title" content="{{ title or 'SGP Yoga Blog' }}">
     <meta name="twitter:description" content="{{ description or 'Explore yoga wisdom, practice tips, and philosophy from our teachers in Mexico City.' }}">
-    <meta name="twitter:image" content="https://www.sgpyoga.co{{ image or '/assets/photos/social/og-blog.webp' }}">
+    <meta name="twitter:image" content="https://sgpyoga.co{{ image or '/assets/photos/social/og-blog.webp' }}">
     
     {# SEO: Canonical & Hreflang Tags #}
-    <link rel="canonical" href="https://www.sgpyoga.co{{ page.url }}">
+    {% if lang == 'es' %}
+        {# Spanish blog pages - canonical should point to English version #}
+        {% if page.fileSlug == 'index-es' %}
+        <link rel="canonical" href="https://sgpyoga.co/blog/dist/">
+        {% else %}
+        <link rel="canonical" href="https://sgpyoga.co/blog/dist/posts/en/{{ page.fileSlug }}/">
+        {% endif %}
+    {% else %}
+        {# English blog pages - canonical points to self #}
+        <link rel="canonical" href="https://sgpyoga.co/blog/dist{{ page.url }}">
+    {% endif %}
     {% if lang == 'es' %}
         {# Spanish page - link to English equivalent #}
-        <link rel="alternate" hreflang="en" href="https://www.sgpyoga.co/blog/dist/{{ page.fileSlug }}.html">
-        <link rel="alternate" hreflang="es" href="https://www.sgpyoga.co{{ page.url }}">
-        <link rel="alternate" hreflang="x-default" href="https://www.sgpyoga.co/blog/dist/{{ page.fileSlug }}.html">
+        {% if page.fileSlug == 'index-es' %}
+        <link rel="alternate" hreflang="en" href="https://sgpyoga.co/blog/dist/">
+        {% else %}
+        <link rel="alternate" hreflang="en" href="https://sgpyoga.co/blog/dist/posts/en/{{ page.fileSlug }}/">
+        {% endif %}
+        <link rel="alternate" hreflang="es" href="https://sgpyoga.co/blog/dist{{ page.url }}">
+        {% if page.fileSlug == 'index-es' %}
+        <link rel="alternate" hreflang="x-default" href="https://sgpyoga.co/blog/dist/">
+        {% else %}
+        <link rel="alternate" hreflang="x-default" href="https://sgpyoga.co/blog/dist/posts/en/{{ page.fileSlug }}/">
+        {% endif %}
     {% else %}
         {# English page - link to Spanish equivalent #}
-        <link rel="alternate" hreflang="en" href="https://www.sgpyoga.co{{ page.url }}">
-        <link rel="alternate" hreflang="es" href="https://www.sgpyoga.co/blog/dist/es/{{ page.fileSlug }}.html">
-        <link rel="alternate" hreflang="x-default" href="https://www.sgpyoga.co{{ page.url }}">
+        <link rel="alternate" hreflang="en" href="https://sgpyoga.co/blog/dist{{ page.url }}">
+        {% if page.fileSlug == 'index-en' %}
+        <link rel="alternate" hreflang="es" href="https://sgpyoga.co/blog/dist/es/">
+        {% else %}
+        <link rel="alternate" hreflang="es" href="https://sgpyoga.co/blog/dist/posts/es/{{ page.fileSlug }}/">
+        {% endif %}
+        <link rel="alternate" hreflang="x-default" href="https://sgpyoga.co/blog/dist{{ page.url }}">
     {% endif %}
     
     <title>{{ title }} | SGP Yoga Blog</title>
