--- a/blog/src/sitemap.njk
+++ b/blog/src/sitemap.njk
@@ -12,10 +12,10 @@ eleventyExcludeFromCollections: true
   
   {# Home Page - English #}
   <url>
-    <loc>https://www.sgpyoga.co/index.html</loc>
-    <xhtml:link rel="alternate" hreflang="en" href="https://www.sgpyoga.co/index.html"/>
-    <xhtml:link rel="alternate" hreflang="es" href="https://www.sgpyoga.co/es/index.html"/>
-    <xhtml:link rel="alternate" hreflang="x-default" href="https://www.sgpyoga.co/index.html"/>
+    <loc>https://sgpyoga.co/index.html</loc>
+    <xhtml:link rel="alternate" hreflang="en" href="https://sgpyoga.co/index.html"/>
+    <xhtml:link rel="alternate" hreflang="es" href="https://sgpyoga.co/es/index.html"/>
+    <xhtml:link rel="alternate" hreflang="x-default" href="https://sgpyoga.co/index.html"/>
     <lastmod>{{ page.date | htmlDateString }}</lastmod>
     <changefreq>weekly</changefreq>
     <priority>1.0</priority>
@@ -23,10 +23,10 @@ eleventyExcludeFromCollections: true
   
   {# Home Page - Spanish #}
   <url>
-    <loc>https://www.sgpyoga.co/es/index.html</loc>
-    <xhtml:link rel="alternate" hreflang="en" href="https://www.sgpyoga.co/index.html"/>
-    <xhtml:link rel="alternate" hreflang="es" href="https://www.sgpyoga.co/es/index.html"/>
-    <xhtml:link rel="alternate" hreflang="x-default" href="https://www.sgpyoga.co/index.html"/>
+    <loc>https://sgpyoga.co/es/index.html</loc>
+    <xhtml:link rel="alternate" hreflang="en" href="https://sgpyoga.co/index.html"/>
+    <xhtml:link rel="alternate" hreflang="es" href="https://sgpyoga.co/es/index.html"/>
+    <xhtml:link rel="alternate" hreflang="x-default" href="https://sgpyoga.co/index.html"/>
     <lastmod>{{ page.date | htmlDateString }}</lastmod>
     <changefreq>weekly</changefreq>
     <priority>1.0</priority>
@@ -34,10 +34,10 @@ eleventyExcludeFromCollections: true
   
   {# About Page - English #}
   <url>
-    <loc>https://www.sgpyoga.co/about.html</loc>
-    <xhtml:link rel="alternate" hreflang="en" href="https://www.sgpyoga.co/about.html"/>
-    <xhtml:link rel="alternate" hreflang="es" href="https://www.sgpyoga.co/es/about.html"/>
-    <xhtml:link rel="alternate" hreflang="x-default" href="https://www.sgpyoga.co/about.html"/>
+    <loc>https://sgpyoga.co/about.html</loc>
+    <xhtml:link rel="alternate" hreflang="en" href="https://sgpyoga.co/about.html"/>
+    <xhtml:link rel="alternate" hreflang="es" href="https://sgpyoga.co/es/about.html"/>
+    <xhtml:link rel="alternate" hreflang="x-default" href="https://sgpyoga.co/about.html"/>
     <lastmod>{{ page.date | htmlDateString }}</lastmod>
     <changefreq>monthly</changefreq>
     <priority>0.8</priority>
@@ -45,10 +45,10 @@ eleventyExcludeFromCollections: true
   
   {# About Page - Spanish #}
   <url>
-    <loc>https://www.sgpyoga.co/es/about.html</loc>
-    <xhtml:link rel="alternate" hreflang="en" href="https://www.sgpyoga.co/about.html"/>
-    <xhtml:link rel="alternate" hreflang="es" href="https://www.sgpyoga.co/es/about.html"/>
-    <xhtml:link rel="alternate" hreflang="x-default" href="https://www.sgpyoga.co/about.html"/>
+    <loc>https://sgpyoga.co/es/about.html</loc>
+    <xhtml:link rel="alternate" hreflang="en" href="https://sgpyoga.co/about.html"/>
+    <xhtml:link rel="alternate" hreflang="es" href="https://sgpyoga.co/es/about.html"/>
+    <xhtml:link rel="alternate" hreflang="x-default" href="https://sgpyoga.co/about.html"/>
     <lastmod>{{ page.date | htmlDateString }}</lastmod>
     <changefreq>monthly</changefreq>
     <priority>0.8</priority>
@@ -56,10 +56,10 @@ eleventyExcludeFromCollections: true
   
   {# Classes Page - English #}
   <url>
-    <loc>https://www.sgpyoga.co/classes.html</loc>
-    <xhtml:link rel="alternate" hreflang="en" href="https://www.sgpyoga.co/classes.html"/>
-    <xhtml:link rel="alternate" hreflang="es" href="https://www.sgpyoga.co/es/classes.html"/>
-    <xhtml:link rel="alternate" hreflang="x-default" href="https://www.sgpyoga.co/classes.html"/>
+    <loc>https://sgpyoga.co/classes.html</loc>
+    <xhtml:link rel="alternate" hreflang="en" href="https://sgpyoga.co/classes.html"/>
+    <xhtml:link rel="alternate" hreflang="es" href="https://sgpyoga.co/es/classes.html"/>
+    <xhtml:link rel="alternate" hreflang="x-default" href="https://sgpyoga.co/classes.html"/>
     <lastmod>{{ page.date | htmlDateString }}</lastmod>
     <changefreq>weekly</changefreq>
     <priority>0.9</priority>
@@ -67,10 +67,10 @@ eleventyExcludeFromCollections: true
   
   {# Classes Page - Spanish #}
   <url>
-    <loc>https://www.sgpyoga.co/es/classes.html</loc>
-    <xhtml:link rel="alternate" hreflang="en" href="https://www.sgpyoga.co/classes.html"/>
-    <xhtml:link rel="alternate" hreflang="es" href="https://www.sgpyoga.co/es/classes.html"/>
-    <xhtml:link rel="alternate" hreflang="x-default" href="https://www.sgpyoga.co/classes.html"/>
+    <loc>https://sgpyoga.co/es/classes.html</loc>
+    <xhtml:link rel="alternate" hreflang="en" href="https://sgpyoga.co/classes.html"/>
+    <xhtml:link rel="alternate" hreflang="es" href="https://sgpyoga.co/es/classes.html"/>
+    <xhtml:link rel="alternate" hreflang="x-default" href="https://sgpyoga.co/classes.html"/>
     <lastmod>{{ page.date | htmlDateString }}</lastmod>
     <changefreq>weekly</changefreq>
     <priority>0.9</priority>
@@ -78,10 +78,10 @@ eleventyExcludeFromCollections: true
   
   {# Events Page - English #}
   <url>
-    <loc>https://www.sgpyoga.co/events.html</loc>
-    <xhtml:link rel="alternate" hreflang="en" href="https://www.sgpyoga.co/events.html"/>
-    <xhtml:link rel="alternate" hreflang="es" href="https://www.sgpyoga.co/es/events.html"/>
-    <xhtml:link rel="alternate" hreflang="x-default" href="https://www.sgpyoga.co/events.html"/>
+    <loc>https://sgpyoga.co/events.html</loc>
+    <xhtml:link rel="alternate" hreflang="en" href="https://sgpyoga.co/events.html"/>
+    <xhtml:link rel="alternate" hreflang="es" href="https://sgpyoga.co/es/events.html"/>
+    <xhtml:link rel="alternate" hreflang="x-default" href="https://sgpyoga.co/events.html"/>
     <lastmod>{{ page.date | htmlDateString }}</lastmod>
     <changefreq>weekly</changefreq>
     <priority>0.9</priority>
@@ -89,10 +89,10 @@ eleventyExcludeFromCollections: true
   
   {# Events Page - Spanish #}
   <url>
-    <loc>https://www.sgpyoga.co/es/events.html</loc>
-    <xhtml:link rel="alternate" hreflang="en" href="https://www.sgpyoga.co/events.html"/>
-    <xhtml:link rel="alternate" hreflang="es" href="https://www.sgpyoga.co/es/events.html"/>
-    <xhtml:link rel="alternate" hreflang="x-default" href="https://www.sgpyoga.co/events.html"/>
+    <loc>https://sgpyoga.co/es/events.html</loc>
+    <xhtml:link rel="alternate" hreflang="en" href="https://sgpyoga.co/events.html"/>
+    <xhtml:link rel="alternate" hreflang="es" href="https://sgpyoga.co/es/events.html"/>
+    <xhtml:link rel="alternate" hreflang="x-default" href="https://sgpyoga.co/events.html"/>
     <lastmod>{{ page.date | htmlDateString }}</lastmod>
     <changefreq>weekly</changefreq>
     <priority>0.9</priority>
@@ -100,10 +100,10 @@ eleventyExcludeFromCollections: true
   
   {# Blog Main Page - English #}
   <url>
-    <loc>https://www.sgpyoga.co/blog/dist/</loc>
-    <xhtml:link rel="alternate" hreflang="en" href="https://www.sgpyoga.co/blog/dist/"/>
-    <xhtml:link rel="alternate" hreflang="es" href="https://www.sgpyoga.co/blog/dist/es/"/>
-    <xhtml:link rel="alternate" hreflang="x-default" href="https://www.sgpyoga.co/blog/dist/"/>
+    <loc>https://sgpyoga.co/blog/dist/</loc>
+    <xhtml:link rel="alternate" hreflang="en" href="https://sgpyoga.co/blog/dist/"/>
+    <xhtml:link rel="alternate" hreflang="es" href="https://sgpyoga.co/blog/dist/es/"/>
+    <xhtml:link rel="alternate" hreflang="x-default" href="https://sgpyoga.co/blog/dist/"/>
     <lastmod>{{ page.date | htmlDateString }}</lastmod>
     <changefreq>weekly</changefreq>
     <priority>0.7</priority>
@@ -111,10 +111,10 @@ eleventyExcludeFromCollections: true
   
   {# Blog Main Page - Spanish #}
   <url>
-    <loc>https://www.sgpyoga.co/blog/dist/es/</loc>
-    <xhtml:link rel="alternate" hreflang="en" href="https://www.sgpyoga.co/blog/dist/"/>
-    <xhtml:link rel="alternate" hreflang="es" href="https://www.sgpyoga.co/blog/dist/es/"/>
-    <xhtml:link rel="alternate" hreflang="x-default" href="https://www.sgpyoga.co/blog/dist/"/>
+    <loc>https://sgpyoga.co/blog/dist/es/</loc>
+    <xhtml:link rel="alternate" hreflang="en" href="https://sgpyoga.co/blog/dist/"/>
+    <xhtml:link rel="alternate" hreflang="es" href="https://sgpyoga.co/blog/dist/es/"/>
+    <xhtml:link rel="alternate" hreflang="x-default" href="https://sgpyoga.co/blog/dist/"/>
     <lastmod>{{ page.date | htmlDateString }}</lastmod>
     <changefreq>weekly</changefreq>
     <priority>0.7</priority>
@@ -127,14 +127,14 @@ eleventyExcludeFromCollections: true
   {# English Blog Posts #}
   {% for post in collections.postsEN %}
   <url>
-    <loc>https://www.sgpyoga.co/blog/dist{{ post.url }}</loc>
+    <loc>https://sgpyoga.co/blog/dist{{ post.url }}</loc>
     {# Find Spanish equivalent if exists #}
     {% set spanishPost = collections.postsES | findByFileSlug(post.fileSlug) %}
-    <xhtml:link rel="alternate" hreflang="en" href="https://www.sgpyoga.co/blog/dist{{ post.url }}"/>
+    <xhtml:link rel="alternate" hreflang="en" href="https://sgpyoga.co/blog/dist{{ post.url }}"/>
     {% if spanishPost %}
-    <xhtml:link rel="alternate" hreflang="es" href="https://www.sgpyoga.co/blog/dist{{ spanishPost.url }}"/>
+    <xhtml:link rel="alternate" hreflang="es" href="https://sgpyoga.co/blog/dist{{ spanishPost.url }}"/>
     {% endif %}
-    <xhtml:link rel="alternate" hreflang="x-default" href="https://www.sgpyoga.co/blog/dist{{ post.url }}"/>
+    <xhtml:link rel="alternate" hreflang="x-default" href="https://sgpyoga.co/blog/dist{{ post.url }}"/>
     <lastmod>{{ post.date | htmlDateString }}</lastmod>
     <changefreq>monthly</changefreq>
     <priority>0.6</priority>
@@ -144,14 +144,14 @@ eleventyExcludeFromCollections: true
   {# Spanish Blog Posts #}
   {% for post in collections.postsES %}
   <url>
-    <loc>https://www.sgpyoga.co/blog/dist{{ post.url }}</loc>
+    <loc>https://sgpyoga.co/blog/dist{{ post.url }}</loc>
     {# Find English equivalent if exists #}
     {% set englishPost = collections.postsEN | findByFileSlug(post.fileSlug) %}
     {% if englishPost %}
-    <xhtml:link rel="alternate" hreflang="en" href="https://www.sgpyoga.co/blog/dist{{ englishPost.url }}"/>
+    <xhtml:link rel="alternate" hreflang="en" href="https://sgpyoga.co/blog/dist{{ englishPost.url }}"/>
     {% endif %}
-    <xhtml:link rel="alternate" hreflang="es" href="https://www.sgpyoga.co/blog/dist{{ post.url }}"/>
-    <xhtml:link rel="alternate" hreflang="x-default" href="https://www.sgpyoga.co/blog/dist{{ englishPost.url if englishPost else post.url }}"/>
+    <xhtml:link rel="alternate" hreflang="es" href="https://sgpyoga.co/blog/dist{{ post.url }}"/>
+    <xhtml:link rel="alternate" hreflang="x-default" href="https://sgpyoga.co/blog/dist{{ englishPost.url if englishPost else post.url }}"/>
     <lastmod>{{ post.date | htmlDateString }}</lastmod>
     <changefreq>monthly</changefreq>
     <priority>0.6</priority>
